# ucloth_base

./: .gitignore  .gitmodules  build_prj.bat
UClothLib/src/c_api/: CMakeLists.txt  uclothexport.h  uclothhandles.h  uclothinterface.cpp  uclothinterface.h  uclothstructures.h
UClothLib/src/simulation/: CMakeLists.txt  constraint.hpp  pbdsimulation.cpp  pbdsimulation.hpp  uclothcommon.hpp  uclothdebug.cpp  uclothdebug.h  world.cpp  world.hpp
UClothLib/src/umath/: CMakeLists.txt
UnityUCloth/: Assembly-CSharp.csproj  UnityUCloth.sln
UnityUCloth/Assets/Materials/: cloth.mat
UnityUCloth/Assets/Scenes/: SampleScene.unity
UnityUCloth/Assets/Scripts/: DebugCPP.cs
UnityUCloth/Assets/UCloth/: UClothCloth.cs  UClothImports.cs  UClothSimulation.cs  UClothWorld.cs
UnityUCloth/Assets/UCloth/Plugins/x64/: ucloth_c_api.exp
UnityUCloth/Assets/UCloth/Plugins/x64/Debug/: ucloth_c_api.exp  ucloth_c_api.ilk  ucloth_c_api.lib
UnityUCloth/TelasCpp/: TelasCpp.sln
UnityUCloth/TelasCpp/Assets/UCloth/: UClothCloth.cs
UnityUCloth/TelasCpp/Assets/UCloth/Plugins/x64/: ucloth_c_api.ilk  ucloth_c_api.lib
UnityUCloth/TelasCpp/ProjectSettings/: ProjectSettings.asset
src/c_api/: CMakeLists.txt
src/simulation/: CMakeLists.txt  constraint.cpp  constraint.hpp  pbdsimulation.cpp  pbdsimulation.hpp  uclothcommon.hpp  world.cpp  world.hpp
